Prevent overlap of promo with footer

--- a/public/css/scss/_homepage.scss
+++ b/public/css/scss/_homepage.scss
@@ -428,13 +428,15 @@
 }
 
 #dialog_promo {
-	margin: 0px;
-	padding: 0px;
-	position: fixed;
-    bottom: 0;
-    width: 1200px;
-	left: 50%;
-	margin-left: -600px;
+	margin      : 0px;
+	padding     : 0px;
+	position    : fixed;
+    bottom      : 0;
+    width       : 1200px;
+	left        : 50%;
+	margin-left : -600px;
+    overflow    : hidden;
+    z-index     : 100;
 }
 
 #promo-image{
